unpackaged/main/default/objects/Recurring_Invoice_Settings__c/Recurring_Invoice_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>User for Batch Invoice Configuration</description>
    <label>Recurring Invoice Settings</label>
</CustomObject>