unpackaged/main/default/objects/Recurring_Invoice_Settings__c/fields/BatchMonitorUserId__c.field-meta.xml
<CustomField>
    <fullName>BatchMonitorUserId__c</fullName>
    <label>BatchMonitorUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>