unpackaged/main/default/objects/Recurring_Invoice_Settings__c/fields/Chain_Batches__c.field-meta.xml
<CustomField>
    <fullName>Chain_Batches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chain Batches</label>
    <type>Checkbox</type>
</CustomField>