unpackaged/main/default/objects/Recurring_Invoice_Settings__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>