unpackaged/main/default/objects/Recurring_Invoice_Settings__c/fields/Scheduled_batch_Create_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_batch_Create_Invoice_Id__c</fullName>
    <label>Scheduled batch Create Invoice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>